# Melissa_TechnicalTest

./: README.md  pyproject.toml
.github/workflows/: docker-image.yml
melissa_technicaltest/: Dockerfile  docker-compose.yml  requirements.txt  train_data_IVDS.xlsx
melissa_technicaltest/app/: app.py  config.py  interface.py  model_predictions.py  model_training.py  tools.pkl  utils.py
