[tool.poetry]
name = "melissa-technicaltest"
version = "0.1.0"
description = ""
authors = ["melissa <im_mokhtari@esi.dz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
